fix: remove anonymous structs and use generated structs in response
